# BulkRNA-Agent

./: .env.example  .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  QUICKREF.md  README.md  environment.yml  install.sh  pyproject.toml  requirements.txt  run_agent.py  setup.py  start.sh
bulkrna_agent/: __init__.py  agent.py  config.py  llm.py  mcp_server.py  tools.py  web_interface.py  web_interface_enhanced.py
docs/: API.md  ENVIRONMENT_SETUP.md  IMPLEMENTATION_GUIDE.md  RNASEQQC_INTEGRATION.md  RNASEQQC_QUICKREF.md  TROUBLESHOOTING.md  TUTORIAL.md
examples/: example_usage.py  generate_example_data.py
tests/: test_bulkrna_agent.py
