# BulkRNA Agent - UV Environment Setup
# Fast Python package installation with uv

# Python version
python-version = "3.11"

[project]
name = "bulkrna-agent"
version = "0.1.0"
description = "AI-powered bulk RNA-seq analysis agent"
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "gradio>=4.0.0",
    "requests>=2.31.0",
    "pydeseq2>=0.4.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
